# hedron-minimal-roottask

./: .config.sh  .gitignore  .gitmodules  README.md  build.sh  create_boot_files.sh  gen_bootimage.sh  run_qemu.sh  run_qemu_direct.sh  run_qemu_uefi.sh
boot/: .gitignore
boot/BOOT/GRUB/: grub.cfg
boot/EFI/BOOT/: .gitignore
grub/: .gitignore  grub.cfg
roottask/: Cargo.toml  rust-toolchain.toml  x86_64-unknown-hedron.json
roottask/.cargo/: config.toml
roottask/src/: bda.rs  debugcon.rs  link.ld  logger.rs  main.rs  serial.rs  start.S
roottask/src/hedron/: capability.rs  crd.rs  mod.rs  pd_ctrl.rs  syscall.rs
