[package]
name = "hmr"
description = "Hedron Minimal Roottask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", default-features = false }
bitflags = "1.3"
runs_inside_qemu = "1.2"
uart_16550 = "0.2"
